# ACP-Examples

./: README.md  makeIn.sh  qmakeIn.sh
CH10/CRYSTALLOGRAPHY/src/: crystallography.cpp  qt.pro
CH10/CUBY/src/: cuby.cpp  qt.pro
CH10/DUALWORLD/src/: dualWorld.cpp  qt.pro
CH10/FACEMODEL/src/: faceModel.cpp  qt.pro
CH10/HELLO_WORLD/src/: HelloWorldSoQt.cpp  qt.pro
CH10/PERC/src/: qt.pro  (+4 more)
CH10/VECTORFIELD/: DrawFluid.cpp  qt.pro
CH15/BRANCH/: Makefile  branch.cpp
CH17/COMPARE0/: compare.cpp
CH17/COMPARE1/: compare.cpp
CH17/COMPARE2/: Makefile  compare.cpp
CH17/CONTAINERS/: containers.cpp
CH17/GETMAX/: Makefile  getmax.cpp
CH17/GETMIN0/: getmin.cpp
CH17/GETMIN1/: Makefile  getmin.cpp
CH17/MODERN/: Makefile  modern.cpp
CH17/MODERN14/: modern14.cpp
CH17/VARIADIC/: Makefile  variadic.cpp
CH18/BARNESHUT/: BH.cpp  Makefile  blurb.txt
CH18/DISK/: Makefile  blurb.txt  disk.cpp
CH18/MOLMODEL/: CMakeLists.txt
CH18/NITROGEN/: Makefile  N2.cpp  blurb.txt
CH18/VICZEK/: Makefile  blurb.txt  viczek.cpp
CH19/BURGERS/: Makefile  blurb.txt  burgers.cpp
CH19/BVP/: Makefile  blurb.txt  sor.cpp
CH19/FEM/: Makefile  blurb.txt  channel.cpp
CH19/FFT/: Makefile  blurb.txt  fft.cpp
CH19/HULL/: Makefile  blurb.txt  hull.cpp
CH19/IVP/: Makefile  blurb.txt  cn.cpp
CH19/SCHRO/: Makefile  blurb.txt  schrodinger.cpp
CH2/FLOATMATH/: Makefile  float.cpp
CH2/PI/: Makefile  pi.cpp
CH2/THISCOMPUTER/: Makefile  thisComputer.cpp
CH2/THREEPI/: Makefile  threePi.cpp
CH20/POTTS/: Makefile  blurb.txt  potts.cpp
CH20/WOLFF/: Makefile  blurb.txt  wolff.cpp
CH20/XY/: Makefile  blurb.txt  xy.cpp
CH21/DIAG/: Makefile  blurb.txt  diag.cpp
CH21/SHOGRW/: Makefile  blurb.txt  grw-sho.cpp
CH21/TMATRIX/: GaussLegendreEigen.cpp  Makefile  T.cpp  blurb.txt
CH22/AHAFGRW/: Makefile  aHAF-grw.cpp  blurb.txt
CH22/AHAFLANCZOS/: Makefile  aHAF.cpp  blurb.cpp
CH24/PHI4/: Makefile  blurb.txt  phi4.cpp
CH24/SU2/: Makefile  SU2.cpp  blurb.txt
CH3/EIGENEX1/: CMakeLists.txt  Makefile  eigenEx1.cpp
CH3/EIGENEX2/: CMakeLists.txt  eigenEx2.cpp
CH3/FIRSTCLASS/: Makefile  firstclass.cpp
CH3/MATRIXSOLVE/: CMakeLists.txt
CH3/RECTBARRIER/: Makefile  rectbarrier.cpp
CH3/VECTOR/: CMakeLists.txt  Makefile  vectEx.cpp
CH5/GAUSS/: Makefile  gauss.cpp
CH6/RATIONAL/: CMakeLists.txt  Makefile  Rational.h  client.cpp
CH7/BWDOPPLER/: Makefile  bwdoppler.cpp
CH9/FORK/: Makefile  fork.cpp
CH9/MPI0/: Makefile  mpi0.cpp
CH9/THREAD0/: Makefile  thread0.cpp
CH9/THREAD1/: Makefile  thread1.cpp
MCMC/: CMakeLists.txt
MCMC/src/: AbsModel.cpp  AbsModel.h  AbsModel.tpp  ArgonLennardJones.cpp  ArgonLennardJones.h  Autocorr.cpp  Autocorr.h  Autocorr.tpp  DisplayCase.cpp  DisplayCase.h  HardSpheres.cpp  HardSpheres.h  Simulator.cpp  Simulator.h  qt.pro  runmcmc.cpp  runnoble.cpp
(+347 files in other folders)
